fix: overflow in x axis and grid not centering in smaller devices

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 @layer base {
   html {
     font-family: "Space Grotesk", sans-serif;
+    overflow-x: hidden;
   }
 
   body {
